--- a/src/main/resources/templates/admin/question-edit.html
+++ b/src/main/resources/templates/admin/question-edit.html
@@ -20,7 +20,7 @@
 </style>
 </head>
 <body>
-	<div class="container">
+	<div class="container mt-4">
 		<div class="alert alert-success alert-dismissible fade show" role="alert"
 			th:if="${!#strings.isEmpty(message)}">
 			<span class="text-center" th:text=${message}></span>
