--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -5,42 +5,42 @@
 <meta charset="utf-8">
 </head>
 <body>
-	<div class="container mt-3">
+	<div class="container mt-4">
 		<div class="alert alert-success alert-dismissible fade show" role="alert"
 			th:if="${!#strings.isEmpty(message)}">
 			<span th:text=${message}></span>
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
-	</div>
-
-	<div class="card mt-3 border border-1 border-danger shadow">
-		<h4 class="card-header text-center">Gerenciar Questões</h4>
-		<div class="card-body">
-			<table id="table" class="table cell-border compact order-column table-hover compact stripe">
-				<thead class="thead-dark text-center">
-					<tr>
-						<th>ID</th>
-						<th>Pergunta</th>
-						<th>Tipo</th>
-						<th>Tópico</th>
-						<th>Data de Envio</th>
-						<th>Status</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="question : ${questions}" th:data-id="${question.id}">
-						<td class="align-middle fw-bold text-center" th:text="${question.id}"></td>
-						<td class="align-middle"><p class="content" th:text="${question.description}"></p></td>
-						<td class="align-middle text-center" th:text="${question.type.displayName}"></td>
-						<td class="align-middle text-truncate" th:text="${question.topic != null? question.topic.name : ''}"></td>
-						<td class="align-middle" th:text="${#dates.format(question.creationDate, 'dd/MM/yyyy')}"></td>
-						<td class="align-middle text-center" th:text="${question.status.displayName}"></td>
-						<td class="align-middle"><a class="btn btn-outline-dark button-sm" href="#"
-								th:href="@{/admin/questions/{id}(id=${question.id})}">Ver mais</a></td>
-					</tr>
-				</tbody>
-			</table>
+		
+		<div class="card mt-3 border border-1 shadow">
+			<h4 class="card-header text-center">Gerenciar Questões</h4>
+			<div class="card-body">
+				<table id="table" class="table table-sm cell-border compact order-column table-hover compact stripe">
+					<thead class="thead-dark text-center">
+						<tr>
+							<th>ID</th>
+							<th>Pergunta</th>
+							<th>Tipo</th>
+							<th>Tópico</th>
+							<th>Data de Envio</th>
+							<th>Status</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="question : ${questions}" th:data-id="${question.id}">
+							<td class="align-middle fw-bold text-center" th:text="${question.id}"></td>
+							<td class="align-middle"><p class="content truncate" th:text="${question.description}"></p></td>
+							<td class="align-middle text-center" th:text="${question.type.displayName}"></td>
+							<td class="align-middle" th:text="${question.topic != null? question.topic.name : ''}"></td>
+							<td class="align-middle" th:text="${#dates.format(question.creationDate, 'dd/MM/yyyy')}"></td>
+							<td class="align-middle text-center" th:text="${question.status.displayName}"></td>
+							<td class="align-middle"><a class="btn btn-outline-dark btn-sm" href="#"
+									th:href="@{/admin/questions/{id}(id=${question.id})}">Ver mais</a></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 
