--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -257,14 +257,13 @@
 							<label>Precisa de Ajuda?</label>
 
 							<!-- Button trigger modal -->
-							<button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+							<button type="button" class="btn btn-outline-dark fw-bold" data-bs-toggle="modal"
 								data-bs-target="#forumTopicModal">Criar um novo Tópico</button>
 
 							<!-- Modal -->
 							<div class="modal fade" id="forumTopicModal" tabindex="-1" aria-labelledby="exampleModalLabel"
 								aria-hidden="true">
-								<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-
+								<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
 									<div class="modal-content">
 										<div class="modal-header">
 											<h5 class="modal-title" id="exampleModalLabel"
@@ -277,25 +276,28 @@
 												<div>
 													<div class="mb-3">
 														<label for="title">Título</label>
-														<small class="d-flex text-muted">Seja específico e imagine que você está fazendo esta pergunta para outra pessoa</small>
+														<small class="d-flex text-muted">Seja específico e imagine que você está fazendo esta
+															pergunta para outra pessoa</small>
 														<input id="title" type="text" class="form-control" required th:field="*{title}">
 													</div>
 
 													<div class="mb-3">
 														<label for="forum-topic-body-editor">Descrição</label>
-														<small class="d-flex text-muted">Inclua todas as informações que alguém precisaria para responder sua pergunta</small>
+														<small class="d-flex text-muted">Inclua todas as informações que alguém precisaria para
+															responder sua pergunta</small>
 														<div id="forum-topic-body-editor"></div>
 														<input type="hidden" id="bodyHtml" th:field="*{bodyHtml}" required></input>
 													</div>
-													
+
 													<div class="mb-3">
 														<label for="topics">Tópicos de Tag</label>
 														<small class="d-flex text-muted">Adicione o(s) tópico(s) que tem haver com sua pergunta</small>
-														<select class="form-select" multiple th:field="*{tags}"
-															th:classappend="${#fields.hasErrors('tags')}? 'is-invalid'" aria-describedby="topicsFeedback">
+														<select class="form-select select2-tags" multiple th:field="*{tags}"
+															th:classappend="${#fields.hasErrors('tags')}? 'is-invalid'" aria-describedby="topicsFeedback"
+															style="width: 100%;">
 															<option th:each="topic : ${topics}" th:value="${topic.id}" th:text="${topic.name}"></option>
-														</select> 
-					
+														</select>
+
 														<div id="topicsFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('tags')}"
 															th:errors="*{tags}">Mensagem de erro</div>
 													</div>
@@ -314,7 +316,7 @@
 					</div>
 
 					<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
-						<a href="#" class="list-group-item list-group-item-action mb-2 shadow" th:each="topic : ${forumTopics}"
+						<a href="#" class="list-group-item list-group-item-action list-card-item mb-3 border-1 shadow" th:each="topic : ${forumTopics}"
 							th:href="@{/disciplines/{id}/forum-topics/{topicId}(id=${discipline.id}, topicId=${topic.id})}">
 
 							<div class="d-flex w-100 justify-content-between">
@@ -323,14 +325,13 @@
 									ago</time>
 							</div>
 							<div class="mb-1 truncate" th:utext="${topic.bodyHtml}">Some placeholder content in a paragraph.</div>
-							
+
 							<div class="d-flex justify-content-between align-items-center">
 								<div class="tags align-self-center">
 									<span class="badge rounded-pill bg-dark me-2" th:each="tag : ${topic.tags}" th:text="${tag.name}"></span>
-								</div> 
+								</div>
 
-								<small class="text-muted" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo
-								Alves.</small>
+								<small th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo Alves.</small>
 							</div>
 						</a>
 					</div>
@@ -342,10 +343,13 @@
 	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
 	<script type="text/javascript" th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
 	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
-	
+
 	<script type="text/javascript" th:inline="javascript">
 		$("time.timeago").timeago();
-		$('.select2').select2();
+		$('.select2').select2({
+			closeOnSelect: false
+		});
+		$('.select2-tags').select2();
 
 		$('#likeButton').click(function() {
 			$.post(location.href.split('?')[0] + '/like')
