--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base(${topic.name}, ~{::body}, _, _, ~{::style})}">
+	th:replace="~{fragments/layout :: base(${topic.name}, ~{::body}, ~{::link}, _, ~{::style})}">
 <head>
 <meta charset="utf-8">
+
+<link rel="stylesheet" type="text/css" th:href="@{/css/nav-breadcrumb.css}">
 
 <style type="text/css" th:inline="css">
 #finish-btn.active {
@@ -76,14 +78,17 @@
 		<div class="bg-dark text-white">
 			<div class="card-body">
 				<div class="col-10 offset-1 mb-3">
-					<div class="d-flex mt-2 mb-4" style="font-size: 14px;">
-						<a href="#" class="link-danger text-decoration-none fw-bold" th:href="@{/dashboard}">Análise e
-							Desenvolvimento de Sistemas</a>
-						<span class="mx-2">></span>
-						<a href="#" class="link-danger text-decoration-none fw-bold"
-							th:href="@{/disciplines/{id}(id=${topic.discipline.id})}" th:text="${topic.discipline.name}">Estrutura
-							de Dados</a>
-					</div>
+					<nav class="nav-breadcrumb dark" aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">
+								<a href="#" th:href="@{/dashboard}" th:text="${topic.discipline.course.name}">Disciplina</a>
+							</li>
+							<li class="breadcrumb-item">
+								<a href="#" th:href="@{/disciplines/{id}(id=${topic.discipline.id})}"
+									th:text="${topic.discipline.name}">Fórum</a>
+							</li>
+						</ol>
+					</nav>
 
 					<h2 class="card-title text-center fw-bolder" th:text="${topic.name}">Topic Name</h2>
 					<p th:text="${topic.description}"></p>
@@ -308,9 +313,10 @@
 	</div>
 
 	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
-	
+
 	<script type="text/javascript">
-		var annotationEditor = new Quill('#annotationEditor', EditorOptions.TOPIC);
+		var annotationEditor = new Quill('#annotationEditor',
+				EditorOptions.TOPIC);
 
 		function openNav() {
 			if ($('#annotationSideNav').hasClass('active')) {
@@ -318,7 +324,7 @@
 			} else {
 				$('#annotationSideNav').addClass('active');
 				saveAnnotation();
-				
+
 				if ($(window).width() > 680) {
 					$('#annotationSideNav').css('width', '340px');
 					$('body').css('marginLeft', '340px');
@@ -369,7 +375,8 @@
 
 		var questionEditor = new Quill('#question', EditorOptions.READ_ONLY);
 
-		var newQuestionEditor = new Quill('#newQuestionEditor', EditorOptions.QUESTION);
+		var newQuestionEditor = new Quill('#newQuestionEditor',
+				EditorOptions.QUESTION);
 		$('#newQuestionForm').submit(function(event) {
 			$('#description').val(newQuestionEditor.root.innerHTML);
 		});
