--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,14 +72,14 @@
 								<span sec:authentication="name">Gustavo</span>
 							</div>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#" th:href="@{/users/favorites}">Meus favoritos</a>
-							<a class="dropdown-item" href="#" th:href="@{/users/annotations}">Minhas anotações</a>
+							<a class="dropdown-item" href="#" th:href="@{/users/annotations}">Minhas Anotações</a>
+							<a class="dropdown-item" href="#" th:href="@{/users/favorites}">Meus Favoritos</a>
 							<h6 class="dropdown-header">Contribuições</h6>
-							<a class="dropdown-item" href="#" th:href="@{/users/topics}">Meus tópicos</a>
+							<a class="dropdown-item" href="#" th:href="@{/users/topics}">Meus Tópicos</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar perfil</a>
+							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar Perfil</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#" th:href="@{/logout}">Logout</a>
+							<a class="dropdown-item" href="#" th:href="@{/logout}">Sair</a>
 						</div>
 					</div>
 				</div>
