--- a/src/main/resources/templates/users/ranking.html
+++ b/src/main/resources/templates/users/ranking.html
@@ -5,10 +5,10 @@
 <meta charset="utf-8">
 </head>
 <body>
-	<div class="container">	
-		<div class="card mt-3 border border-1 border-danger shadow">
+	<div class="container mt-4">	
+		<div class="card shadow">
 			<div class="card-body">
-				<h2 class="card-title text-center fw-bolder">Ranking</h2>
+				<h4 class="card-title text-center fw-bolder">Ranking</h4>
 				<table id="rankingTable" class="table table-bordered table-stripped">
 					<thead>
 						<tr>
@@ -20,27 +20,27 @@
 					<tbody>
 						<tr class="table-warning fw-bolder">
 							<td>1</td>
-							<td>Gustavo Alves</td>
+							<td><a class="text-decoration-none text-dark" href="#">Gustavo Alves</a></td>
 							<td>91561</td>
 						</tr>
 						<tr class="table-warning fw-bolder">
 							<td>2</td>
-							<td>Larissa Silva</td>
+							<td><a class="text-decoration-none text-dark" href="#">Larissa Silva</a></td>
 							<td>91000</td>
 						</tr>
 						<tr class="table-warning fw-bolder">
 							<th scope="row">3</th>
-							<td>Alice Bianca</td>
+							<td><a class="text-decoration-none text-dark" href="#">Alice Bianca</a></td>
 							<td>69561</td>
 						</tr>
 						<tr>
 							<td>4</td>
-							<td>Alice Bianca</td>
+							<td><a class="text-decoration-none text-dark" href="#">Maria Silva</a></td>
 							<td>67866</td>
 						</tr>
 						<tr>
 							<td>5</td>
-							<td>Rafael Fernandes</td>
+							<td><a class="text-decoration-none text-dark" href="#">Rafael Fernandes</a></td>
 							<td>464</td>
 						</tr>
 					</tbody>
