--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -346,10 +346,13 @@
 
 	<script type="text/javascript" th:inline="javascript">
 		$("time.timeago").timeago();
+	
 		$('.select2').select2({
 			closeOnSelect: false
 		});
-		$('.select2-tags').select2();
+		$('.select2-tags').select2({
+			dropdownParent: $("#forumTopicModal") 		
+		});
 
 		$('#likeButton').click(function() {
 			$.post(location.href.split('?')[0] + '/like')
