--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,40 +6,45 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+		<link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
 		
 		<!-- Bootstrap Icons -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+		<link rel="stylesheet" href="/webjars/bootstrap-icons/font/bootstrap-icons.css">
 		
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+		<script src="/webjars/jquery/jquery.min.js"></script>
 		
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="/webjars/font-awesome/css/font-awesome.min.css">
 		
 		<!-- Highlight -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/styles/monokai-sublime.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/highlight.min.js"></script>	
+		<link rel="stylesheet" href="/webjars/highlightjs/styles/monokai-sublime.min.css">
+		<script src="/webjars/highlightjs/highlight.min.js"></script>	
+		
+		<script src="/webjars/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
 		
 		<!-- KaTeX - Math elements -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.css" integrity="sha384-t5CR+zwDAROtph0PXGte6ia8heboACF9R5l/DiY+WZ3P2lxNgvJkQk5n7GPvLMYw" crossorigin="anonymous">
-	    <!-- The loading of KaTeX is deferred to speed up page rendering -->
-	    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.js" integrity="sha384-FaFLTlohFghEIZkw6VGwmf9ISTubWAVYW8tG8+w2LAIftJEULZABrF9PPFv+tVkH" crossorigin="anonymous"></script>	
+		<link rel="stylesheet" href="/webjars/katex/dist/katex.min.css">
+	    <script src="/webjars/katex/dist/katex.min.js"></script>	
 		
-		<!-- WYSIWYG editor -->
-		<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-		<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+		<!-- QuillJs editor -->
+		<link rel="stylesheet" href="/webjars/quill/dist/quill.snow.css">
+		<script src="/webjars/quill/dist/quill.min.js"></script>
+		<script th:src="@{/js/quill/image-drop.min.js}"></script>
+		<script th:src="@{/webjars/quill-image-resize/image-resize.min.js}"></script>
+		<link rel="stylesheet" th:href="@{/webjars/quill-emoji/dist/quill-emoji.css}"/>
+		<script th:src="@{/webjars/quill-emoji/dist/quill-emoji.js}"></script>
 		
 		<!-- DataTables -->
-		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
-		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>		
+		<link rel="stylesheet" href="/webjars/datatables/css/jquery.dataTables.min.css">
+		<script src="/webjars/datatables/js/jquery.dataTables.min.js"></script>		
 		
 		<!-- SortableJS -->
-		<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script> 
+		<script src="/webjars/sortablejs/Sortable.min.js"></script> 
 		
 		<!-- Select2 -->
-		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+		<link rel="stylesheet" href="/webjars/select2/css/select2.min.css" />
+		<script src="/webjars/select2/js/select2.min.js"></script>
 		
 		<title th:text="${title} == '' ? 'Fatecando' : ${title} + ' | Fatecando'"></title>
 		
